增加关于我们，图册浏览页面

--- a/Application/Home/View/theme/Index/index.html
+++ b/Application/Home/View/theme/Index/index.html
@@ -346,6 +346,16 @@
 </block>
 
 <block name="script">
+<!-- Sliders -->
+<!-- jQuery REVOLUTION Slider -->
+<script src="__STATIC__/theme/external/rs-plugin/js/jquery.themepunch.plugins.min.js"></script>
+<script src="__STATIC__/theme/external/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
+<!-- Livicons -->
+<script src="__STATIC__/theme/external/livicons/livicons-1.3.min.js"></script>
+<script src="__STATIC__/theme/external/livicons/raphael-min.js"></script>
+ <!-- Event that will trigger when the element is scrolled in to the viewport.--> 
+<script src="__STATIC__/theme/external/inview/jquery.inview.js"></script>
+
 <script>
     $(document).ready(function() {
        revDefault(); 
