--- a/Application/Home/View/theme/Public/header.html
+++ b/Application/Home/View/theme/Public/header.html
@@ -47,7 +47,7 @@
                 <li class="z-nav__item">
                     <!-- Subsidiary menu toogle button -->
                     <span class="z-nav__toggle-sub plus"><i class="fa fa-plus"></i><i class="fa fa-minus"></i></span>
-                    <a class="z-nav__link z-nav__link--active" href="index.html">Home</a>
+                    <a class="z-nav__link z-nav__link--active" href="{:U('Index/index')}">Home</a>
                     <!-- Subsidiary menu list-->
                     <ul class="z-nav__list-secondary">
                                 <li class="z-nav__item"><a class="z-nav__link" href="index1.html">Homepage Version 1</a></li>
@@ -113,10 +113,10 @@
                 <li class="z-nav__item">
                     <!-- Subsidiary menu toogle button -->
                     <span class="z-nav__toggle-sub plus"><i class="fa fa-plus"></i><i class="fa fa-minus"></i></span>
-                    <a class="z-nav__link" href="about.html">About</a>
+                    <a class="z-nav__link" href="{:U('About/index')}">About</a>
                     <!-- Subsidiary menu list-->
                     <ul class="z-nav__list-secondary">
-                        <li class="z-nav__item"><a class="z-nav__link" href="about.html">About</a></li>
+                        <li class="z-nav__item"><a class="z-nav__link" href="{:U('About/index')}">About</a></li>
                         <li class="z-nav__item"><a class="z-nav__link" href="single-employee.html">Single employee</a></li>
                         <li class="z-nav__item"><a class="z-nav__link" href="careers.html">Careers</a></li>
                         <li class="z-nav__item"><a class="z-nav__link" href="testimonials.html">Testimonials</a></li>
