--- a/Public/static/theme/css/style.css
+++ b/Public/static/theme/css/style.css
@@ -9843,7 +9843,7 @@ table th[class*="col-"] {
   padding-top: 115px;
   padding-bottom: 165px;
   margin-bottom: -1px;
-  background-image: url(http://placehold.it/1108x1260);
+  background-image: url(../images/1108x1260.png);
   background-repeat: no-repeat;
   background-size: 554px 630px;
   background-position: 100% 100%;
