--- a/Application/Home/View/theme/Public/footer.html
+++ b/Application/Home/View/theme/Public/footer.html
@@ -19,7 +19,7 @@
 					<article class="post post--latest">
 						<h3 class="not-visible">Latest post</h3>
 						<a class="post__images" href="single-post.html">
-							<img src="http://placehold.it/160x160" alt="">
+							<img src="__STATIC__/theme/images/160x160.png" alt="">
 						</a>
 						<a class="post__text" href="single-post.html">Mauris orci purus, ultrices dapibus justo non, eleifend consequat lorem. </a>
 						<time datetime="2014-07-17" class="post__date">July 17, 2014</time>
@@ -30,7 +30,7 @@
 					<article class="post post--latest">
 						<h3 class="not-visible">Latest post</h3>
 						<a class="post__images" href="single-post.html">
-							<img src="http://placehold.it/160x160" alt="">
+							<img src="__STATIC__/theme/images/160x160.png" alt="">
 						</a>
 						<a class="post__text" href="single-post.html">Pellentesque et magna malesuada, scelerisque elit ac, convallis lacus. </a>
 						<time datetime="2014-07-16" class="post__date">July 16, 2014</time>
@@ -118,29 +118,21 @@
 <!-- Mobile menu -->
 <script src="__STATIC__/theme/external/z-nav/jquery.mobile.menu.js"></script>
 
-<!-- Sliders -->
-<!-- jQuery REVOLUTION Slider -->
-<script src="__STATIC__/theme/external/rs-plugin/js/jquery.themepunch.plugins.min.js"></script>
-<script src="__STATIC__/theme/external/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
 <!-- Touch slider - Swiper -->
 <script src="__STATIC__/theme/external/swiper/idangerous.swiper.js"></script>
 
-<!-- Twitter feed -->
-<script src="__STATIC__/theme/external/twitterfeed/twitterfeed.js"></script>
 <!-- Scroll to piugin -->
 <script src="__STATIC__/theme/external/scrollto/jquery.scrollTo.min.js"></script>
 
-<!-- Livicons -->
-<script src="__STATIC__/theme/external/livicons/livicons-1.3.min.js"></script>
-<script src="__STATIC__/theme/external/livicons/raphael-min.js"></script>
 
 <!-- Waypoints -->
 <script src="__STATIC__/theme/external/waypoint/waypoints.min.js"></script>
- <!-- Event that will trigger when the element is scrolled in to the viewport.--> 
-<script src="__STATIC__/theme/external/inview/jquery.inview.js"></script>
+
 
 <!-- Custom -->
 <script src="__STATIC__/theme/js/custom.js"></script>
+
+
 <block name="script"></block> <!-- 用于加载js代码 -->
 <!-- 页面footer钩子，一般用于加载插件JS文件和JS代码 -->
 {:hook('pageFooter', 'widget')}
