增加文章列表页面

--- a/Application/Home/View/theme/Public/header.html
+++ b/Application/Home/View/theme/Public/header.html
@@ -147,16 +147,7 @@
                 <li class="z-nav__item">
                     <!-- Subsidiary menu toogle button -->
                     <span class="z-nav__toggle-sub plus"><i class="fa fa-plus"></i><i class="fa fa-minus"></i></span>
-                    <a class="z-nav__link" href="gallery-3col.html">Portfolio</a>
-                    <!-- Subsidiary menu list-->
-                    <ul class="z-nav__list-secondary">
-                        <li class="z-nav__item"><a class="z-nav__link" href="gallery-2col.html">Portfolio 2 columns</a></li>
-                        <li class="z-nav__item"><a class="z-nav__link" href="gallery-3col.html">Portfolio 3 columns</a></li>
-                        <li class="z-nav__item"><a class="z-nav__link" href="gallery-4col.html">Portfolio 4 columns</a></li>
-                        <li class="z-nav__item"><a class="z-nav__link" href="gallery-full.html">Portfolio fullwidth</a></li>
-                        <li class="z-nav__item"><a class="z-nav__link" href="case-study.html">Case study</a></li>
-                    </ul>
-                    <!-- end subsidiary menu list-->
+                    <a class="z-nav__link" href="{:U('Gallery/index')}">图片展示</a>
                 </li>
                 
                 <li class="z-nav__item">
