--- a/Application/Home/View/theme/Gallery/index.html
+++ b/Application/Home/View/theme/Gallery/index.html
@@ -59,234 +59,19 @@
 						</div>
 					</div>
 				</a><!-- end gallery item -->
-				
-				<a class="gallery-item commerce" href="__STATIC__/theme/images/1108x1260.png">
+				<volist name="list" id="data">
+					<a class="gallery-item psd" href="{:get_cover($data['cover_id'],$field = path)}">
 					<div class="image-container image-container--describe">
 						<div class="gallery__image">
-							<img src="__STATIC__/theme/images/452x452.png" alt="">	
-						</div>
-						<div class="image-container__info">
-								<span class="image-container__info-main">Hard Work</span>
-								<span class="image-container__info-more">E-commerce</span>
-						</div>
-					</div>
-				</a><!-- end gallery item -->
-
-				<a class="gallery-item commerce" href="__STATIC__/theme/images/1108x1260.png">
-					<div class="image-container image-container--describe">
-						<div class="gallery__image">
-							<img src="__STATIC__/theme/images/452x452.png" alt="">
+							<img src="{:get_cover($data['cover_id'],$field = path)}" alt="">
 						</div>	
 						<div class="image-container__info">
-								<span class="image-container__info-main">Be Precise</span>
-								<span class="image-container__info-more">E-commerce</span>
+							<span class="image-container__info-main">{$data.title}</span>
+							<span class="image-container__info-more">PSD</span>
 						</div>
 					</div>
-				</a><!-- end gallery item -->
-
-				<a class="gallery-item wp" href="__STATIC__/theme/images/1108x1260.png">
-					<div class="image-container image-container--describe">
-						<div class="gallery__image">
-							<img src="__STATIC__/theme/images/452x452.png" alt="">
-						</div>
-						<div class="image-container__info">
-								<span class="image-container__info-main">Be in Trend</span>
-								<span class="image-container__info-more">WordPress</span>
-						</div>
-					</div>
-				</a><!-- end gallery item -->
-
-				<a class="gallery-item psd" href="__STATIC__/theme/images/1108x1260.png">
-					<div class="image-container image-container--describe">
-						<div class="gallery__image">
-							<img src="__STATIC__/theme/images/452x452.png" alt="">
-						</div>	
-						<div class="image-container__info">
-								<span class="image-container__info-main">Use Imagination</span>
-								<span class="image-container__info-more">PSD</span>
-						</div>
-					</div>
-				</a><!-- end gallery item -->
-
-				<a class="gallery-item wp" href="__STATIC__/theme/images/1108x1260.png">
-					<div class="image-container image-container--describe">
-						<div class="gallery__image">
-							<img src="__STATIC__/theme/images/452x452.png" alt="">
-						</div>	
-						<div class="image-container__info">
-								<span class="image-container__info-main">Move Upward</span>
-								<span class="image-container__info-more">WordPress</span>
-						</div>
-					</div>
-				</a><!-- end gallery item -->
-
-				<a class="gallery-item wp" href="__STATIC__/theme/images/1108x1260.png">
-					<div class="image-container image-container--describe">
-						<div class="gallery__image">
-							<img src="__STATIC__/theme/images/452x452.png" alt="">
-						</div>	
-						<div class="image-container__info">
-								<span class="image-container__info-main">Try Your Best</span>
-								<span class="image-container__info-more">WordPress</span>
-						</div>
-					</div>
-				</a><!-- end gallery item -->
-
-				<a class="gallery-item html" href="__STATIC__/theme/images/1108x1260.png">
-					<div class="image-container image-container--describe">
-						<div class="gallery__image">
-							<img src="__STATIC__/theme/images/452x452.png" alt="">
-						</div>	
-						<div class="image-container__info">
-								<span class="image-container__info-main">Have Fun</span>
-								<span class="image-container__info-more">HTML</span>
-						</div>
-					</div>
-				</a><!-- end gallery item -->
-
-				<a class="gallery-item html" href="__STATIC__/theme/images/1108x1260.png">
-					<div class="image-container image-container--describe">
-						<div class="gallery__image">
-							<img src="__STATIC__/theme/images/452x452.png" alt="">
-						</div>	
-						<div class="image-container__info">
-								<span class="image-container__info-main">Testing</span>
-								<span class="image-container__info-more">HTML</span>
-						</div>
-					</div>
-				</a><!-- end gallery item -->
-
-				<a class="gallery-item psd" href="__STATIC__/theme/images/1108x1260.png">
-					<div class="image-container image-container--describe">
-						<div class="gallery__image">
-							<img src="__STATIC__/theme/images/452x452.png" alt="">
-						</div>	
-						<div class="image-container__info">
-								<span class="image-container__info-main">Stationary</span>
-								<span class="image-container__info-more">PSD</span>
-						</div>
-					</div>
-				</a><!-- end gallery item -->
-
-				<a class="gallery-item wp" href="__STATIC__/theme/images/1108x1260.png">
-					<div class="image-container image-container--describe">
-						<div class="gallery__image">
-							<img src="__STATIC__/theme/images/452x452.png" alt="">
-						</div>	
-						<div class="image-container__info">
-								<span class="image-container__info-main">Planning</span>
-								<span class="image-container__info-more">WordPress</span>
-						</div>
-					</div>
-				</a><!-- end gallery item -->
-
-				<a class="gallery-item commerce" href="__STATIC__/theme/images/1108x1260.png">
-					<div class="image-container image-container--describe">
-						<div class="gallery__image">
-							<img src="__STATIC__/theme/images/452x452.png" alt="">
-						</div>	
-						<div class="image-container__info">
-								<span class="image-container__info-main">Stay Cool</span>
-								<span class="image-container__info-more">E-commerce</span>
-						</div>
-					</div>
-				</a><!-- end gallery item -->
-
-				<a class="gallery-item wp" href="__STATIC__/theme/images/1108x1260.png">
-					<div class="image-container image-container--describe">
-						<div class="gallery__image">
-							<img src="__STATIC__/theme/images/452x452.png" alt="">
-						</div>	
-						<div class="image-container__info">
-								<span class="image-container__info-main">Coffee Brake</span>
-								<span class="image-container__info-more">WordPress</span>
-						</div>
-					</div>
-				</a><!-- end gallery item -->
-
-				<a class="gallery-item wp" href="__STATIC__/theme/images/1108x1260.png">
-					<div class="image-container image-container--describe">
-						<div class="gallery__image">
-							<img src="__STATIC__/theme/images/452x452.png" alt="">
-						</div>	
-						<div class="image-container__info">
-								<span class="image-container__info-main">Looking after</span>
-								<span class="image-container__info-more">WordPress</span>
-						</div>
-					</div>
-				</a><!-- end gallery item -->
-
-				<a class="gallery-item wp" href="__STATIC__/theme/images/1108x1260.png">
-					<div class="image-container image-container--describe">
-						<div class="gallery__image">
-							<img src="__STATIC__/theme/images/452x452.png" alt="">
-						</div>	
-						<div class="image-container__info">
-								<span class="image-container__info-main">Late Night</span>
-								<span class="image-container__info-more">WordPress</span>
-						</div>
-					</div>
-				</a><!-- end gallery item -->
-
-				<a class="gallery-item html" href="__STATIC__/theme/images/1108x1260.png">
-					<div class="image-container image-container--describe">
-						<div class="gallery__image">
-							<img src="__STATIC__/theme/images/452x452.png" alt="">
-						</div>	
-						<div class="image-container__info">
-								<span class="image-container__info-main">Be in Touch</span>
-								<span class="image-container__info-more">HTML</span>
-						</div>
-					</div>
-				</a><!-- end gallery item -->
-
-				<a class="gallery-item commerce" href="__STATIC__/theme/images/1108x1260.png">
-					<div class="image-container image-container--describe">
-						<div class="gallery__image">
-							<img src="__STATIC__/theme/images/452x452.png" alt="">
-						</div>	
-						<div class="image-container__info">
-								<span class="image-container__info-main">Co-working</span>
-								<span class="image-container__info-more">E-commerce</span>
-						</div>
-					</div>
-				</a><!-- end gallery item -->
-
-				<a class="gallery-item wp" href="__STATIC__/theme/images/1108x1260.png">
-					<div class="image-container image-container--describe">
-						<div class="gallery__image">
-							<img src="__STATIC__/theme/images/452x452.png" alt="">
-						</div>	
-						<div class="image-container__info">
-								<span class="image-container__info-main">Speed up</span>
-								<span class="image-container__info-more">WordPress</span>
-						</div>
-					</div>
-				</a><!-- end gallery item -->
-
-				<a class="gallery-item wp" href="__STATIC__/theme/images/1108x1260.png">
-					<div class="image-container image-container--describe">
-						<div class="gallery__image">
-							<img src="__STATIC__/theme/images/452x452.png" alt="">
-						</div>	
-						<div class="image-container__info">
-								<span class="image-container__info-main">Leave a Note</span>
-								<span class="image-container__info-more">WordPress</span>
-						</div>
-					</div>
-				</a><!-- end gallery item -->
-
-				<a class="gallery-item html" href="__STATIC__/theme/images/1108x1260.png">
-					<div class="image-container image-container--describe">
-						<div class="gallery__image">
-							<img src="__STATIC__/theme/images/452x452.png" alt="">
-						</div>	
-						<div class="image-container__info">
-								<span class="image-container__info-main">Stay Calm</span>
-								<span class="image-container__info-more">HTML</span>
-						</div>
-					</div>
-				</a><!-- end gallery item -->
+				</a>
+				</volist>
 			</div>
 			
 		</section><!-- end container -->
